# bill-reminder-bot

./: .coverage  .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: lint.yml  test.yml
migrations/: env.py
migrations/versions/: 20260331_add_integrations.py  20260331_initial.py
src/bot/: bot.py  config.py  main.py  notifier.py  scheduler.py  utils.py
src/bot/channels/: base.py  email.py  telegram.py
src/bot/db/: connection.py  models.py
src/bot/handlers/: bills.py  errors.py  history.py  payments.py  settings.py  start.py
src/bot/services/: bills.py  integrations.py  payments.py
tests/: conftest.py  helpers.py  test_notifier.py  test_services_bills.py  test_services_integrations.py  test_services_payments.py  test_utils.py
