[project]
name = "bill-reminder-bot"
version = "0.1.0"
description = "Personal Telegram bill reminder bot"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-telegram-bot[job-queue]>=22.7",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic-settings[dotenv]>=2.13.1",
]

[dependency-groups]
dev = [
    "poethepoet>=0.42.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.11.2",
]

[project.scripts]
bot = "bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["bot"]

# ── Code quality ──────────────────────────────────────────────────────────────
[tool.poe.tasks.test]
cmd = "pytest"
help = "Run all tests with coverage"

[tool.poe.tasks.test-fast]
cmd = "pytest --no-cov -x"
help = "Run tests without coverage, stop on first failure"

[tool.poe.tasks.lint]
cmd = "ruff check src tests"
help = "Check code with ruff"

[tool.poe.tasks.lint-fix]
cmd = "ruff check --fix src tests"
help = "Auto-fix ruff lint issues"

[tool.poe.tasks.format]
cmd = "ruff format src tests"
help = "Format code with ruff"

[tool.poe.tasks.format-check]
cmd = "ruff format --check src tests"
help = "Check formatting without modifying files"

[tool.poe.tasks.check]
sequence = ["lint", "format-check", "test"]
help = "Run lint + format check + tests (CI equivalent)"

# ── Docker ────────────────────────────────────────────────────────────────────
[tool.poe.tasks.build]
cmd = "docker compose build"
help = "Build the bot image"

[tool.poe.tasks.up]
cmd = "docker compose up -d"
help = "Start all services in detached mode"

[tool.poe.tasks.down]
cmd = "docker compose down"
help = "Stop all services"

[tool.poe.tasks.logs]
cmd = "docker compose logs -f bot"
help = "Tail bot container logs"

[tool.poe.tasks.migrate]
cmd = "docker compose run --rm bot uv run alembic upgrade head"
help = "Apply database migrations inside the container"

[tool.poe.tasks.db-reset]
help = "Tear down, restart postgres, and re-apply migrations"

[[tool.poe.tasks.db-reset.sequence]]
ref = "down"

[[tool.poe.tasks.db-reset.sequence]]
cmd = "docker compose up -d postgres"

[[tool.poe.tasks.db-reset.sequence]]
cmd = "docker compose run --rm bot uv run alembic upgrade head"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short --strict-markers --cov=bot --cov-report=term-missing --cov-fail-under=80"
markers = [
    "unit: fast, isolated unit tests (no I/O)",
]

[tool.coverage.run]
omit = [
    "src/bot/bot.py",
    "src/bot/main.py",
    "src/bot/scheduler.py",
    "src/bot/handlers/*",
    "src/bot/db/connection.py",
    "src/bot/channels/telegram.py",
]

[tool.alembic]
script_location = "migrations"
file_template = "%%(year)d%%(month).2d%%(day).2d_%%(slug)s"
prepend_sys_path = ["."]

[[tool.alembic.post_write_hooks]]
name = "ruff_check"
type = "module"
module = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"

[[tool.alembic.post_write_hooks]]
name = "ruff_format"
type = "module"
module = "ruff"
options = "format REVISION_SCRIPT_FILENAME"
